--- a/.github/workflows/generate-sitemap.yml
+++ b/.github/workflows/generate-sitemap.yml
@@ -5,7 +5,6 @@ on:
     workflows: ["Deploy"]
     types:
       - completed
-      - requested
 
 jobs:
   sitemap_job:
@@ -15,6 +14,7 @@ jobs:
       - name: Checkout the repo
         uses: actions/checkout@v2
         with:
+          ref: gh-pages
           fetch-depth: 0
       - name: Generate the sitemap
         id: sitemap
