--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "clear && rm -rf ./build && NODE_ENV=development concurrently --names \"build,webserver\" \"npm:build\" \"wait-on ./build/.build.log && npx live-server --no-browser ./build\"",
     "build": "node build.js"
   },
+  "type": "module",
   "keywords": [
     "documentation",
     "ssg",
@@ -16,40 +17,40 @@
   "author": "Alexis Boni",
   "license": "AGPL-3.0-or-later",
   "dependencies": {
-    "chalk": "^4.1.0",
-    "chokidar": "^3.4.3",
-    "columnify": "^1.5.4",
-    "concurrently": "^5.3.0",
-    "directory-tree": "^2.2.5",
-    "favicons": "^6.2.0",
+    "chalk": "^5.0.1",
+    "chokidar": "^3.5.3",
+    "columnify": "^1.6.0",
+    "concurrently": "^7.0.0",
+    "directory-tree": "^3.2.2",
+    "favicons": "^6.2.2",
     "flag-icon-css": "^3.5.0",
     "flat": "^5.0.2",
-    "fs-extra": "^9.0.1",
-    "fuse.js": "^6.4.3",
-    "glob": "^7.1.6",
-    "gray-matter": "^4.0.2",
-    "highlight.js": "^10.4.1",
-    "html-entities": "^1.3.1",
-    "html-to-text": "^6.0.0",
+    "fs-extra": "^10.0.1",
+    "fuse.js": "^6.5.3",
+    "glob": "^7.2.0",
+    "gray-matter": "^4.0.3",
+    "highlight.js": "^11.5.0",
+    "html-entities": "^2.3.3",
+    "html-to-text": "^8.1.0",
     "jimp": "^0.16.1",
-    "jsdom": "^16.4.0",
+    "jsdom": "^19.0.0",
     "live-server": "1.2.1",
     "markdown-it": "^12.3.2",
-    "markdown-it-anchor": "^6.0.1",
+    "markdown-it-anchor": "^8.4.1",
     "markdown-it-emoji": "^2.0.0",
     "markdown-it-external-links": "0.0.6",
     "markdown-it-imsize": "^2.0.1",
-    "markdown-it-mark": "^3.0.0",
+    "markdown-it-mark": "^3.0.1",
     "markdown-it-task-lists": "^2.1.1",
-    "minimatch": "^3.0.4",
-    "mustache": "^4.1.0",
-    "node-sass": "^5.0.0",
+    "minimatch": "^5.0.1",
+    "mustache": "^4.2.0",
+    "node-sass": "^7.0.1",
     "pretty": "^2.0.0",
-    "purgecss": "^3.0.0",
+    "purgecss": "^4.1.3",
     "spectre.css": "^0.5.9",
     "trianglify": "^4.1.1",
-    "twemoji": "^13.0.1",
+    "twemoji": "^14.0.2",
     "voca": "^1.4.0",
-    "wait-on": "^5.2.0"
+    "wait-on": "^6.0.1"
   }
 }
