--- a/.github/workflows/build-and-deploy-site.yml
+++ b/.github/workflows/build-and-deploy-site.yml
@@ -18,6 +18,7 @@ jobs:
           node-version: "14"
       - run: npm install
       - run: npm run build
+      - run: ls -lha ./build
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.2.5
         with:
@@ -26,4 +27,4 @@ jobs:
           clean: true
           clean-exclude: |
             .nojekyll
-            some/*.txt
+            CNAME
