--- a/.github/workflows/build-and-deploy-site.yml
+++ b/.github/workflows/build-and-deploy-site.yml
@@ -15,7 +15,8 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "14"
+          node-version: "17"
+          check-latest: true
       - run: npm install
       - run: npm run build
       - run: ls -lha ./build
